syntax = "proto3";

package mesg.api;
option go_package = "coreapi";

// This is the primary API to interact with MESG Engine functionalities.
// It can be consumed by any applications or tools that you'd like to interact with MESG Engine.
// It is actually used by the MESG CLI and MESG Application libraries.
//
// This API is only accessible through [gRPC](https://grpc.io/).
//
// Services must not use this API, but rather use the [Service API](./service.md).
//
// The source file of this API is hosted on [GitHub](https://github.com/mesg-foundation/engine/blob/master/protobuf/coreapi/api.proto).
service Core {
  // Info returns all necessary information from the core.
  rpc Info(InfoRequest) returns (InfoReply) {}
}

// The request to fetch all informations of the Core
message InfoRequest {}

// Information concerning the Core from the `info` API.
message InfoReply {
  string version = 4; // Version of the core
}
